--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
 <div class="container">
-    <div class="row">
-        <div class="col-12 mt-3">
-            <button type="button" class="btn btn-primary" (click)="generate()">Generate</button>
+    <div class="row mt-3">
+        <div class="col-12">
+            <button type="button" class="btn btn-primary me-2" (click)="generate()">Generate</button>
+            <button type="button" class="btn btn-primary" (click)="clear()">Clear</button>
         </div>
     
     </div>
