Logic switched in service

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -25,14 +25,14 @@
                 </thead>
                 <tbody class="bg-light text-large text-center">
                     <ng-container *ngFor="let numbers of numberList; let i=index">
-                        <tr>
+                        <tr class="blue">
                             <td>{{numbers[0]}}</td>
                             <td>{{numbers[1]}}</td>
                             <td>{{numbers[2]}}</td>
                             <td>{{numbers[3]}}</td>
                             <td>{{numbers[4]}}</td>
                             <td>{{numbers[5]}}</td>
-                            <th scope="row">{{numbers[6]}}</th>
+                            <th scope="row" class="red">{{numbers[6]}}</th>
                         </tr>
                     </ng-container>
                 </tbody>
